--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ dependencies {
 //    testImplementation platform('org.junit:junit-bom:5.10.0')
 //    testImplementation 'org.junit.jupiter:junit-jupiter'
 
-    testImplementation 'org.testng:testng:7.1.0'
+//    testImplementation 'org.testng:testng:7.1.0'
 }
 
 test {
@@ -21,5 +21,13 @@ test {
 }
 
 test {
-    useTestNG()
+//    useTestNG()
+}
+
+dependencies {
+    testImplementation 'junit:junit:4.13'
+}
+
+test {
+    useJUnit()
 }
